--- a/Group10_FinalProject/Group10_FinalProject.csproj
+++ b/Group10_FinalProject/Group10_FinalProject.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Hard.aspx.designer.cs">
       <DependentUpon>Hard.aspx</DependentUpon>
     </Compile>
+    <Compile Include="LeetCodeProblem37.cs" />
     <Compile Include="Medium.aspx.cs">
       <DependentUpon>Medium.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -103,6 +104,7 @@
       <DependentUpon>Medium.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Solution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
